# 2026-Prog2-Nagyhazi

./: CMakeLists.txt  CaesarCipher.cpp  CaesarCipher.h  Cipher.h  CipherFactory.cpp  CipherFactory.h  CipherFile.cpp  CipherFile.h  CipherList.cpp  CipherList.h  Doxyfile  Makefile  MessageFile.cpp  MessageFile.h  MyCipher.cpp  MyCipher.h  Registrar.h  StringFuncs.cpp  StringFuncs.h  TranspositionCipher.cpp  TranspositionCipher.h  ciphers.cpp  ciphers.h  main.cpp  specifikacio.md  terv.md  test.cpp  test.h
latex/: _caesar_cipher_8h_source.tex  _cipher_8h_source.tex  _cipher_factory_8h_source.tex  _cipher_file_8h_source.tex  _cipher_list_8h_source.tex  _message_file_8h_source.tex  _my_cipher_8h_source.tex  _registrar_8h_source.tex  _string_funcs_8h_source.tex  _transposition_cipher_8h_source.tex  annotated.tex  class_caesar_cipher.tex  class_cipher.eps  class_cipher.tex  class_cipher_factory.tex  class_cipher_file.tex  class_cipher_list.tex  class_message_file.tex  class_my_cipher.eps  class_my_cipher.tex  class_transposition_cipher.eps  class_transposition_cipher.tex  files.tex  hierarchy.tex  refman.aux  refman.idx  refman.ilg  refman.ind  refman.out  refman.tex  refman.toc  struct_registrar.tex  struct_string_funcs.tex
